k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-system
  namespace: health-system
  labels:
    app.kubernetes.io/name: health-system
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: health-system
